--- a/Example/FlowEngine/SimpleCalculatorViewController.xib
+++ b/Example/FlowEngine/SimpleCalculatorViewController.xib
@@ -10,6 +10,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SimpleCalculatorViewController" customModule="FlowEngine_Example" customModuleProvider="target">
             <connections>
+                <outlet property="amountTextField" destination="R1o-YX-BnJ" id="5fI-f7-ZQz"/>
+                <outlet property="errorLabel" destination="0ws-95-oi9" id="bvP-pa-2wu"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -26,9 +28,12 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zbp-zx-Ji2">
                     <rect key="frame" x="173.5" y="822" width="67" height="30"/>
                     <state key="normal" title="Continuar"/>
+                    <connections>
+                        <action selector="didTapContinue" destination="-1" eventType="touchUpInside" id="eUY-Hq-QrV"/>
+                    </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ws-95-oi9">
-                    <rect key="frame" x="20" y="140" width="374" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ws-95-oi9">
+                    <rect key="frame" x="20" y="140" width="374" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
