--- a/Example/FlowEngine/SimpleCongratsViewController.xib
+++ b/Example/FlowEngine/SimpleCongratsViewController.xib
@@ -27,6 +27,9 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XBN-IG-EPj">
                     <rect key="frame" x="158" y="816" width="98" height="30"/>
                     <state key="normal" title="Volver al inicio"/>
+                    <connections>
+                        <action selector="didTapGoBack" destination="-1" eventType="touchUpInside" id="gAu-E5-paE"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
